# ascend-social-purpose-agentic-systems-

./: .dockerignore  .env.example  .gitignore  .jcodemunch.jsonc  AGENTS.md  Cargo.toml  EMERALD_TABLETS.md  HANDOFF.md  HOSTINGER-VPS-HANDOFF.md  README.md  SKILLS.md  package-lock.json  package.json  playwright.config.js  vitest.config.js
.beads/: README.md  issues.jsonl
.github/workflows/: ci.yml
apps/site/: jsconfig.json  next.config.mjs  package.json  tenant.config.js
beads/: BEADS_PROTOCOL.md  manifest.json
beads/checkpoints/: 0001-repo-inventory.md  0002-skill-ingestion.md  0008-build-test.md  0009-browser-verification.md  0010-pr-review-merge.md  (+1 more)
config/: model-policy.json  tool-allowlist.json
db/: schema.sql
deploy/: Caddyfile  Dockerfile.api  Dockerfile.rust  Dockerfile.web  docker-compose.optional-integrations.yml  docker-compose.v04-rust.yml  docker-compose.yml  nginx.conf
docs/: ADAMSREVIEW-FINAL.md  AGENT-PROVENANCE.md  ARCHITECTURE.md  BACKUP-RESTORE.md  CI-QA-GATES.md  CUSTOMIZE-FRONTEND.md  DEPLOY-HOSTINGER-VPS.md  DEPLOYMENT-LIFECYCLE.md  DESIGN-SYSTEM.md  FLYWHEEL.md  FRONTEND-BRIDGE-CONTRACT.md  GOLD-STANDARD-AUDIT.md  HERMES-MISSION-OS-CONTRACT.md  IMPLEMENTATION-NEXT.md  LANGFUSE-OBSERVABILITY.md  LITELLM-GATEWAY.md  LITELLM-LANGFUSE-OPENWEBUI.md  MODEL-GATEWAY.md  MODEL-USAGE-LEDGER.md  OBSERVABILITY-AND-TRACES.md  OFFER.md  ONE-CLICK-BUNDLE-FLYWHEEL.md  OPENWEBUI-WORKSPACE.md  OPERATOR-API.md  OPERATOR-MANUAL.md  OPS-DASHBOARD.md  PHASE-3-PARTIAL-HANDOFF.md  PHASE-7-PRODUCTION-HARDENING.md  PRODUCT-BOUNDARIES.md  PRODUCTION-GAPS.md  RELEASE-MANIFEST.md  REPEATABLE-DEPLOYMENT.md  RUNBOOK.md  RUST-BOUNDARIES.md  SAFETY.md  SECURITY-AND-APPROVALS.md  SECURITY-CHECKLIST.md  TDD.md  TENANT-AGENT-PACK.md  UPGRADE-2-GOLD-STANDARD.md  (+7 more)
flywheel/: README.md  acfs-project-notes.md
icm/: README.md
missionctl/: missionctl.mjs
openspec/: README.md
scripts/: adamsreview-lite.mjs  bootstrap-vps.sh  deploy-hostinger.sh  doctor.mjs  generated-file-audit.mjs  install-acfs.sh  make-release.mjs  new-tenant.mjs  openspec-task-audit.mjs  secret-audit.mjs  smoke-managed.mjs  test-discovery-audit.mjs  verify-v06.mjs
services/mission-connect-rs/: Cargo.toml
services/mission-connect-rs/src/: main.rs
services/mission-icm-rs/: Cargo.toml
services/mission-icm-rs/src/: main.rs
services/mission-worker-rs/: Cargo.toml
services/mission-worker-rs/src/: main.rs
(+194 files in other folders)
