[workspace]
members = [
  "services/mission-core-rs",
  "services/mission-connect-rs",
  "services/mission-worker-rs",
  "services/mission-policy-rs",
  "services/mission-icm-rs"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Kupuri Media / Asc3nd Social Purpose OS"]

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
