[package]
name = "mission-icm-rs"
version = "0.4.0"
edition.workspace = true
license.workspace = true
description = "Filesystem-safe ICM stage loader and runner."

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
